--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Bogoan Kim
+email: bogoankim@hanyang.ac.kr
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  HCI Researcher
+  #Write an awesome description for your new site here. You can edit this
+  #line in _config.yml. It will appear in your document head meta (for
+  #Google search results) and in your feed.xml site description.
+# twitter_username: username
+github_username: borendipity
 minimal_mistakes_skin: default
 search: true
 
@@ -58,22 +59,38 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Bogoan Kim (김보관)"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Postdoctoral Researcher @ KAIST"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:bogoankim@hanyang.ac.kr"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/borendipity/"
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-graduation-cap"
+    # icon: "fab fa-fw fa-google"
+      url: "https://scholar.google.co.kr/citations?user=njeSUnIAAAAJ&hl=ko&authuser=2"
+    # - label: "ORCID"
+      # icon: "fab fa-fw fa-orcid"
+      # url: "https://orcid.org/0000-0003-1283-4697"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-in"
+      url: "https://www.linkedin.com/in/bogoankim/"
+    - label: "C.V."
+      icon: "far fa-fw fa-file-alt"
+      url: "./assets/files/CV_Bogoan_Kim.pdf"
+    # - label: "DMAIS Lab @ CAU"
+      # icon: "fas fa-fw fa-link"
+      # url: "https://www.dmais.cau.ac.kr"
+    # - label: "Twitter"
+      # icon: "fab fa-fw fa-twitter-square"
+      # # url: "https://twitter.com/"
+    # - label: "Facebook"
+      # icon: "fab fa-fw fa-facebook-square"
+      # # url: "https://facebook.com/"
 
 footer:
   links:
