--- a/_config.yml
+++ b/_config.yml
@@ -82,27 +82,21 @@ author:
     - label: "C.V."
       icon: "far fa-fw fa-file-alt"
       url: "./assets/files/CV_Bogoan_Kim.pdf"
-    # - label: "DMAIS Lab @ CAU"
+    # - label: "xxx Lab @ xxxx"
       # icon: "fas fa-fw fa-link"
-      # url: "https://www.dmais.cau.ac.kr"
-    # - label: "Twitter"
-      # icon: "fab fa-fw fa-twitter-square"
-      # # url: "https://twitter.com/"
-    # - label: "Facebook"
-      # icon: "fab fa-fw fa-facebook-square"
-      # # url: "https://facebook.com/"
+      # url: ""
 
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    # url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+    # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+     # url: "https://instagram.com/"
 
 defaults:
   # _posts
