--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "Home"
     url: "#home"
-  - title: "Bio"
+  - title: "About Me"
     url: "#bio"
   - title: "Publications"
-    url: "#publications"
+    url: "#pub"
   - title: "Honors & Awards"
-    url: "#awards"
+    url: "#honors"
