--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: "Home"
     url: "#home"
-  - title: "About Me"
+  - title: "Bio"
     url: "#bio"
   - title: "Publications"
     url: "#pub"
