--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name       : "Bogoan Kim (김보관)"
+  name       : "Bogoan Kim"
   avatar     : "/assets/images/bio-photo_bo.jpg"
   bio        : "Post-doc. @ KAIST"
   location   : "Daejeon, Korea"
