--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ github_username: borendipity
 minimal_mistakes_skin: default
 search: false
 
+# SEO Related
+google_site_verification: "Bj4msVCjnggSsetR-_bihFyUDzyhM1WPR3lPpPFmByk"
+naver_site_verification: "688189ba4f5ce2b03d0061197120bfddb0ab34eb"
+
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
