--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
     - label: "Google Scholar"
       icon: "fas fa-fw fa-graduation-cap"
     # icon: "fab fa-fw fa-google"
-      url: "https://scholar.google.co.kr/citations?user=njeSUnIAAAAJ&hl=ko&authuser=2"
+      url: "https://scholar.google.co.kr/citations?user=eiUCUwgAAAAJ&hl=en&oi=ao"
     # - label: "ORCID"
       # icon: "fab fa-fw fa-orcid"
       # url: "https://orcid.org/0000-0003-1283-4697"
