--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ github_username: borendipity
 minimal_mistakes_skin: default
 search: false
 
+url: "https://bogoankim.github.io"
+
 # SEO Related
 google_site_verification: "Bj4msVCjnggSsetR-_bihFyUDzyhM1WPR3lPpPFmByk"
 naver_site_verification: "688189ba4f5ce2b03d0061197120bfddb0ab34eb"
