--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Bogoan Kim
-email: bogoankim@hanyang.ac.kr
+email: bogoan@kaist.ac.kr
 description: >- # this means to ignore newlines until "baseurl:"
   HCI Researcher
   #Write an awesome description for your new site here. You can edit this
@@ -68,8 +68,8 @@ plugins:
 author:
   name       : "Bogoan Kim"
   avatar     : "/assets/images/bio-photo_bo.jpg"
-  bio        : "Post-doc. @ Hanyang University"
-  location   : "Seoul, Korea"
+  bio        : "Post-doc. @ KAIST"
+  location   : "Daejeon, Korea"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
