--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Bogoan Kim (김보관)
+title: Bogoan Kim
 email: bogoan@kaist.ac.kr
 description: >- # this means to ignore newlines until "baseurl:"
   Bogoan Kim is a postdoctoral researcher at KAIST, supported by the Jang Young Sil Fellow Program. 
@@ -66,7 +66,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name       : "Bogoan Kim"
+  name       : "Bogoan Kim (김보관)"
   avatar     : "/assets/images/bio-photo_bo.jpg"
   bio        : "Post-doc. @ KAIST"
   location   : "Daejeon, Korea"
