--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Bogoan Kim
-email: bogoan@chungbuk.ac.kr
+email: bogoan@cbnu.ac.kr
 description: >- # this means to ignore newlines until "baseurl:"
   Bogoan Kim is an incoming Assistant Professor at Chungbuk National University and a postdoctoral researcher at KAIST, supported by the Jang Young Sil Fellow Program. 
   He received his Ph.D. in Artificial Intelligence from Hanyang University, where he was supported by the NRF of Korea Ph.D. Fellowship. 
