--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
-      url: "mailto:bogoankim@hanyang.ac.kr"
+      url: "mailto:bogoan@cbnu.ac.kr"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/borendipity/"
