--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ search: false
 
 url: "https://bogoankim.github.io"
 
-favicon: /assets/images/favicon.png
+favicon: "/assets/images/favicon.png"
 
 # SEO Related
 #google_site_verification: "Bj4msVCjnggSsetR-_bihFyUDzyhM1WPR3lPpPFmByk"
