--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,5 @@ main:
     url: "#pub"
   - title: "Honors & Awards"
     url: "#honors"
+  - title: "CV"
+    url: "https://bogoankim.github.io/assets/files/CV_Bogoan_Kim.pdf"
