Comment out C.V. section in _config.yml
Comment out C.V. section in the configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -86,9 +86,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/bogoankim/"
-    - label: "C.V."
-      icon: "far fa-fw fa-file-alt"
-      url: "./assets/files/CV_Bogoan_Kim.pdf"
+    # - label: "C.V."
+    #   icon: "far fa-fw fa-file-alt"
+    #   url: "./assets/files/CV_Bogoan_Kim.pdf"
     - label: "HCI Lab @ CBNU"
       icon: "fas fa-fw fa-link"
       url: "https://sites.google.com/view/cbnu-hci"
